create eggbread.html create chili.html added links to index.html

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -21,7 +21,7 @@
             <li>salt & pepper</li>
         </ul>
         
-        <h3>Stepes:</h3>
+        <h3>Steps:</h3>
         <ol>
             <li>form patties</li>
             <li>spice up patties with salt & pepper</li>
