--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="/recipes/burger.html">Burger Recipe></a></li>
+            <li><a href="recipes/burger.html">Burger Recipe</a></li>
+            <li><a href="recipes/eggbread.html">Eggbread Recipe</a></li>
+            <li><a href="recipes/chili.html">Chili Recipe</a></li>
         </ul>
         
     </body>
